Refactor and extract HTTP request handling(mostly)