@@ -4,17 +4,16 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.ispradar.backend.dto.Plan;
 import com.ispradar.backend.service.PlanCatalog.PlanMetadata;
-import com.ispradar.backend.enums.http.HttpStatusCode;
+import com.ispradar.backend.util.http.BaseIspHttpClient;
+import com.ispradar.backend.util.http.HttpStatusCode;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
-import java.net.CookieManager;
-import java.net.CookiePolicy;
 import java.net.URI;
 import java.net.URLEncoder;
-import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
@@ -26,7 +25,7 @@ import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 @Service
-public class NovaService {
+public class NovaService extends BaseIspHttpClient {
 
     private static final Logger LOG = LoggerFactory.getLogger(NovaService.class);
 
@@ -42,59 +41,27 @@ public class NovaService {
             "Ν", "Ξ", "Ο", "Π", "Ρ", "Σ", "Τ", "Υ", "Φ", "Χ", "Ψ", "Ω"
     );
 
-    private final ObjectMapper objectMapper;
     private final ExecutorService executorService;
-    private final CookieManager cookieManager;
-    private final HttpClient httpClient;
-    private final Object initLock = new Object();
-    private volatile boolean initialized;
 
     public NovaService(ObjectMapper objectMapper, ExecutorService executorService) {
-        this.objectMapper = objectMapper;
+        super(objectMapper);
         this.executorService = executorService;
-        this.cookieManager = new CookieManager(null, CookiePolicy.ACCEPT_ALL);
-        this.httpClient = HttpClient.newBuilder()
-                .cookieHandler(cookieManager)
-                .followRedirects(HttpClient.Redirect.NORMAL)
-                .connectTimeout(Duration.ofSeconds(15))
+    }
+
+    @Override
+    protected String getProviderName() { return "Nova"; }
+
+    @Override
+    protected void initializeSession() throws IOException, InterruptedException {
+        HttpRequest req = HttpRequest.newBuilder()
+                .uri(URI.create(INIT_URL))
+                .header("User-Agent", USER_AGENT)
+                .header("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8")
+                .GET()
                 .build();
-        this.initialized = false;
-    }
-
-    private void ensureInitialized() throws IOException, InterruptedException {
-        if (initialized) return;
-        synchronized (initLock) {
-            if (initialized) return;
-            LOG.info("[Nova] Initialising session cookies...");
-
-            HttpRequest req = HttpRequest.newBuilder()
-                    .uri(URI.create(INIT_URL))
-                    //.timeout(Duration.ofSeconds(15))
-                    .header("User-Agent", USER_AGENT)
-                    .header("Accept", "text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,*/*;q=0.8")
-                    .header("accept-language", "el")
-                    .header("priority", "u=1, i")
-                    .header("sec-ch-ua", "\"Google Chrome\";v=\"147\", \"Not.A/Brand\";v=\"8\", \"Chromium\";v=\"147\"")
-                    .header("sec-ch-ua-mobile", "?0")
-                    .header("sec-ch-ua-platform", "\"Windows\"")
-                    .header("sec-fetch-dest", "empty")
-                    .header("sec-fetch-mode", "cors")
-                    .header("sec-fetch-site", "same-origin")
-                    .GET()
-                    .build();
-
-            HttpResponse<String> r = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-            LOG.debug("[Nova] Session init status: {}, cookies: {}", r.statusCode(), cookieManager.getCookieStore().getCookies());
-            if (HttpStatusCode.isError(r.statusCode())) {
-                throw new IOException("Nova session init failed: HTTP " + r.statusCode());
-            }
-            initialized = true;
-        }
-    }
-
-    private void resetSession() {
-        cookieManager.getCookieStore().removeAll();
-        initialized = false;
+        HttpResponse<String> r = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
+        if (HttpStatusCode.isError(r.statusCode())) 
+            throw new IOException("Session init failed: HTTP " + r.statusCode());
     }
 
     private HttpRequest.Builder buildApiReq(String url) {
@@ -105,7 +72,7 @@ public class NovaService {
                 .header("Accept", "application/json, text/plain, */*")
                 .header("Accept-Language", "el")
                 .header("Priority", "u=1, i")
-                .header("Referer", "https://nova.gr/statheri-tilefonia/programmata/stathero-internet")
+                .header("Referer", INIT_URL)
                 .header("sec-ch-ua", "\"Google Chrome\";v=\"147\", \"Not.A/Brand\";v=\"8\", \"Chromium\";v=\"147\"")
                 .header("sec-ch-ua-mobile", "?0")
                 .header("sec-ch-ua-platform", "\"Windows\"")
@@ -116,43 +83,23 @@ public class NovaService {
     }
 
     public Map<String, Map<String, Object>> fetchStates() throws IOException, InterruptedException {
-        ensureInitialized();
-
         HttpRequest req = buildApiReq(REGIONS_API).GET().build();
-        HttpResponse<String> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-        if (HttpStatusCode.requiresSessionReset(resp.statusCode())) {
-            resetSession();
-            ensureInitialized();
-            resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-        }
-        
-        if (!HttpStatusCode.isSuccess(resp.statusCode())) 
-            throw new IOException("Nova states error: " + resp.statusCode());
+        HttpResponse<String> resp = executeWithRetry(req);
 
         Map<String, Object> data = objectMapper.readValue(resp.body(), new TypeReference<>() {});
         List<String> results = extractResultsList(data);
-
         Map<String, Map<String, Object>> states = new LinkedHashMap<>();
-        for (String r : results) {
+        
+        for (String r : results)
             states.put(r, Map.of("region", r, "label", r));
-        }
+
         return states;
     }
 
     public Map<String, Map<String, Object>> fetchMunicipalities(Map<String, Object> stateCtx) throws IOException, InterruptedException {
-        ensureInitialized();
-
         String region = encode((String) stateCtx.get("region"));
         HttpRequest req = buildApiReq(MUNICIPALITIES_API + "?region=" + region).GET().build();
-        HttpResponse<String> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-        if (HttpStatusCode.requiresSessionReset(resp.statusCode())) {
-            resetSession();
-            ensureInitialized();
-            resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-        }
-        
-        if (!HttpStatusCode.isSuccess(resp.statusCode())) 
-            throw new IOException("Nova municipalities error: " + resp.statusCode());
+        HttpResponse<String> resp = executeWithRetry(req);
 
         Map<String, Object> data = objectMapper.readValue(resp.body(), new TypeReference<>() {});
         List<String> results = extractResultsList(data);
@@ -168,49 +115,30 @@ public class NovaService {
     }
 
     public Map<String, Map<String, Object>> fetchStreets(Map<String, Object> stateCtx, Map<String, Object> munCtx) throws IOException, InterruptedException {
-        ensureInitialized();
-
         String region = encode((String) stateCtx.get("region"));
         String municipality = encode((String) munCtx.get("municipality"));
-        
         Map<String, Map<String, Object>> allStreets = Collections.synchronizedMap(new LinkedHashMap<>());
-        List<CompletableFuture<Void>> futures = new ArrayList<>();
 
-        // Nova queries streets by their first letter. We fetch them concurrently.
-        for (String letter : GREEK_ALPHABET) {
-            futures.add(CompletableFuture.runAsync(() -> {
-                try {
-                    String url = STREETS_API + encode(letter) + "?region=" + region + "&municipality=" + municipality;
-                    HttpRequest req = buildApiReq(url).GET().build();
-                    HttpResponse<String> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-                    if (HttpStatusCode.requiresSessionReset(resp.statusCode())) {
-                        resetSession();
-                        ensureInitialized();
-                        resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-                    }
+        var futures = GREEK_ALPHABET.stream().map(letter -> CompletableFuture.runAsync(() -> {
+            try {
+                String url = STREETS_API + encode(letter) + "?region=" + region + "&municipality=" + municipality;
+                var req = buildApiReq(url).GET().build();
+                var resp = executeWithRetry(req);
+                extractResultsListOfMaps(resp.body()).forEach(s -> {
+                    String streetName = (String) s.get("street");
+                    Map<String, Object> ctx = new LinkedHashMap<>();
+                    ctx.put("region", stateCtx.get("region"));
+                    ctx.put("municipality", munCtx.get("municipality"));
+                    ctx.put("city", s.get("city"));
+                    ctx.put("street", streetName);
+                    ctx.put("zipcode", s.get("zipcode"));
+                    ctx.put("label", streetName);
+                    allStreets.put(streetName, ctx);
+                });
+            } catch (Exception e) { LOG.error("[Nova] Street fetch error for letter " + letter, e); }
+        }, executorService)).toArray(CompletableFuture[]::new);
 
-                    if (HttpStatusCode.isSuccess(resp.statusCode())) {
-                        Map<String, Object> data = objectMapper.readValue(resp.body(), new TypeReference<>() {});
-                        List<Map<String, Object>> results = extractResultsListOfMaps(data);
-                        for (Map<String, Object> s : results) {
-                            String streetName = (String) s.get("street");
-                            Map<String, Object> ctx = new LinkedHashMap<>();
-                            ctx.put("region", stateCtx.get("region"));
-                            ctx.put("municipality", munCtx.get("municipality"));
-                            ctx.put("city", s.get("city"));
-                            ctx.put("street", streetName);
-                            ctx.put("zipcode", s.get("zipcode"));
-                            ctx.put("label", streetName);
-                            allStreets.put(streetName, ctx);
-                        }
-                    }
-                } catch (Exception e) {
-                    LOG.error("[Nova] Street fetch error for letter " + letter, e);
-                }
-            }, executorService));
-        }
-
-        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+        CompletableFuture.allOf(futures).join();
         return allStreets;
     }
 
@@ -219,14 +147,11 @@ public class NovaService {
             Map<String, Object> munCtx,
             Map<String, Object> streetCtx,
             String streetNumber) throws IOException, InterruptedException {
-        ensureInitialized();
-
         Map<String, Object> payload = buildAvailabilityPayload(stateCtx, munCtx, streetCtx, streetNumber);
         String jsonBody = objectMapper.writeValueAsString(payload);
 
         HttpRequest req = HttpRequest.newBuilder()
                 .uri(URI.create(AVAIL_API))
-                //.timeout(Duration.ofSeconds(30))
                 .header("User-Agent", USER_AGENT)
                 .header("Accept", "application/json, text/plain, */*")
                 .header("Accept-Language", "el")
@@ -243,17 +168,8 @@ public class NovaService {
                 .POST(HttpRequest.BodyPublishers.ofString(jsonBody))
                 .build();
 
-        HttpResponse<String> resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-        if (HttpStatusCode.requiresSessionReset(resp.statusCode())) {
-            LOG.warn("[Nova] Got {} response, resetting session", resp.statusCode());
-            resetSession();
-            ensureInitialized();
-            resp = httpClient.send(req, HttpResponse.BodyHandlers.ofString());
-        }
-        if (!HttpStatusCode.isSuccess(resp.statusCode())) {
-            throw new IOException("Nova availability check error: HTTP " + resp.statusCode());
-        }
-
+        HttpResponse<String> resp = executeWithRetry(req);
+ 
         Map<String, Object> data = objectMapper.readValue(resp.body(), new TypeReference<>() {});
         return parseNovaPlans(data);
     }
@@ -273,9 +189,7 @@ public class NovaService {
         packageSelected.put("price", null);
         packageSelected.put("packageGroupType", "");
         payload.put("packageSelected", packageSelected);
-        
         payload.put("customerInfo", Map.of("isNewCustomer", true, "isExistingCustomerMoving", false, "landlineNumber", ""));
-        
         payload.put("address", Map.of(
                 "region", stateCtx.get("region"),
                 "municipality", munCtx.get("municipality"),
@@ -284,12 +198,9 @@ public class NovaService {
                 "zipcode", streetCtx.get("zipcode"),
                 "streetNumber", number
         ));
-        
         payload.put("userType", "Postpaid");
         payload.put("fixedPackagesType", "TwoP");
-        
         payload.put("eligibleFixedPackagesType", null); 
-
         return payload;
     }
 
@@ -397,8 +308,10 @@ public class NovaService {
     }
 
     @SuppressWarnings("unchecked")
-    private List<Map<String, Object>> extractResultsListOfMaps(Map<String, Object> data) {
-        return (List<Map<String, Object>>) data.getOrDefault("result", Collections.emptyList());
+    private List<Map<String, Object>> extractResultsListOfMaps(String body) throws IOException {
+        return (List<Map<String, Object>>)
+                objectMapper.readValue(body, new TypeReference<Map<String, Object>>() {})
+                    .getOrDefault("result", List.of()); 
     }
 
     private String encode(String value) {
